--- a/P1Joystick.properties
+++ b/P1Joystick.properties
@@ -1,9 +1,9 @@
 #Robocode Robot
-#Sun May 08 16:34:26 BRT 2016
-robot.description=Player 2 robot without gun movements
+#Sun May 08 16:34:11 BRT 2016
+robot.description=Player 2 robot for Joystick usage
 robot.codesize=2519
 robot.author.name=R\u00E1fagan
 robocode.version=1.9.2.5
-robot.classname=player.P2SimpleGunJoystick
+robot.classname=player.P1Joystick
 robot.version=1.0
 robot.include.source=true
